# VLMEvalKit

./: .flake8  README.md  requirements.txt  run.py
maya/: .gitignore  README.md  predict.py  pyproject.toml  requirements.sh
maya/evaluation/: mmbench_maya_full_ft.txt  mmbench_maya_full_ft.xlsx  mme_results_dump.txt  mme_results_toxicity_finetuned.txt  pope_results.txt  pope_results_toxicity_finetuned.txt  vizwiz_results.txt  vizwiz_results_toxicity_finetuned.txt
maya/maya/llava/: __init__.py  conversation.py  mm_utils.py
maya/maya/llava/eval/: eval_gpt_review.py  eval_gpt_review_bench.py  eval_gpt_review_visual.py  eval_pope.py  eval_science_qa.py  eval_science_qa_gpt4.py  eval_science_qa_gpt4_requery.py  eval_textvqa.py  generate_webpage_data_from_table.py  m4c_evaluator.py  model_qa.py  model_vqa.py  model_vqa_loader.py  model_vqa_maya.py  model_vqa_mmbench.py  model_vqa_science.py  model_vqa_vizwiz.py  qa_baseline_gpt35.py  run_llava.py  summarize_gpt_review.py  talk2maya.py
maya/maya/llava/model/: __init__.py  apply_delta.py  (+5 more)
maya/playground/eval/: eval_utils.py
maya/playground/finetuning/: dataset_utils.py  finetune_args.py
maya/scripts/: convert_mmbench_for_submission.py  convert_seed_for_submission.py  convert_sqa_to_llava.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  extract_mm_projector.py  merge_lora_weights.py
maya/scripts/maya/: finetune_aya_siglip.sh  finetune_aya_siglip2.sh  pretrain_aya_siglip.sh  pretrain_aya_siglip2.sh
maya/scripts/v1_5/: pretrain_aya.sh  pretrain_llava_siglip.sh  pretrain_llava_siglip2.sh
(+56 files in other folders)
