[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maya"
version = "1.0"
description = "Maya: An Instruction Finetuned Multilingual Multimodal Model."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "torch==2.1.2", "torchvision==0.16.2",
    "transformers==4.47.0", "tokenizers==0.21", "sentencepiece==0.1.99", "shortuuid==1.0.13",
    "accelerate==0.27.2", "datasets==2.15.0", "peft==0.12.0", "bitsandbytes==0.43.3",
    "pydantic==2.8.2", "markdown2[all]", "numpy==1.26.4", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests==2.32.3", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
]

[project.optional-dependencies]
train = ["deepspeed==0.14.2", "ninja", "wandb==0.17.8"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://huggingface.co/maya-multimodal"
"Bug Tracker" = "https://github.com/nahidalam/maya/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
